add update user

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-sdk": "^2.653.0",
     "dynamodb-toolbox": "github:dakaz/dynamodb-toolbox#query",
     "lambda-api": "^0.10.5",
+    "lodash": "^4.17.15",
     "serverless": "^1.67.0",
     "uuid": "^7.0.3"
   }
