--- a/serverless.yml
+++ b/serverless.yml
@@ -16,6 +16,7 @@ provider:
   timeout: 20
   environment: 
     TODO_TABLENAME: ${self:custom.tableName}
+    STAGE: ${self:custom.stage}
   iamRoleStatements: # IAM Role Permissions
     - Effect: "Allow"
       Action:
